# logix-as-a-text

./: Cargo.toml  IMPULSE_ORDER_MEMO.md  README.md  SPEC.md  SPEC_STUB.md
.github/workflows/: rust.yml
docs/: SPEC.md
docs/spec/: DSL.md  INDEX.md  STUB_GEN.md
docs/tech/: FILE_FORMAT.md
spec/: SPEC.md
src/: compiler.rs  main.rs  test_interpreter.rs
src/compiler/: lexer.rs  parser.rs  resolved_type_tag.rs
src/compiler/parser/: expression.rs
toolchain/: Cargo.toml
toolchain/src/compiler/: lexer.rs  parser.rs  resolved_type_tag.rs
toolchain/src/compiler/parser/: expression.rs
