[package]
name = "neosvr-dsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
