[package]
name = "neosvr-dsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
atty = "0.2.14"
chrono = "0.4.26"
clap = { version = "3.2.25", features = ["derive"] }
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.94"
strum = { version = "0.24.1", features = ["derive"] }
